--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
       <app-root></app-root>
     </div>
-    <script src="runtime-es2015.js" type="module"></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/runtime-es2015.js"
+      type="module"
+    ></script>
     <script src="runtime-es5.js" nomodule defer></script>
     <script src="polyfills-es5.js" nomodule defer></script>
     <script src="polyfills-es2015.js" type="module"></script>
