--- a/index.html
+++ b/index.html
@@ -15,15 +15,50 @@
       src="http://huyletruong.github.io/BookStore-ClientAngularApp/runtime-es2015.js"
       type="module"
     ></script>
-    <script src="runtime-es5.js" nomodule defer></script>
-    <script src="polyfills-es5.js" nomodule defer></script>
-    <script src="polyfills-es2015.js" type="module"></script>
-    <script src="styles-es2015.js" type="module"></script>
-    <script src="styles-es5.js" nomodule defer></script>
-    <script src="scripts.js" defer></script>
-    <script src="vendor-es2015.js" type="module"></script>
-    <script src="vendor-es5.js" nomodule defer></script>
-    <script src="main-es2015.js" type="module"></script>
-    <script src="main-es5.js" nomodule defer></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/rhttp://huyletruong.github.io/BookStore-ClientAngularApp/untime-es5.js"
+      nomodule
+      defer
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/polyfills-es5.js"
+      nomodule
+      defer
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/polyfills-es2015.js"
+      type="module"
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/styles-es2015.js"
+      type="module"
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/styles-es5.js"
+      nomodule
+      defer
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/scripts.js"
+      defer
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/vendor-es2015.js"
+      type="module"
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/vendor-es5.js"
+      nomodule
+      defer
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/main-es2015.js"
+      type="module"
+    ></script>
+    <script
+      src="http://huyletruong.github.io/BookStore-ClientAngularApp/main-es5.js"
+      nomodule
+      defer
+    ></script>
   </body>
 </html>
