--- a/index.html
+++ b/index.html
@@ -12,51 +12,48 @@
       <app-root></app-root>
     </div>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/runtime-es2015.js"
+      src="/BookStore-ClientAngularApp/runtime-es2015.js"
       type="module"
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/rhttp://huyletruong.github.io/BookStore-ClientAngularApp/untime-es5.js"
+      src="/BookStore-ClientAngularApp/r/BookStore-ClientAngularApp/untime-es5.js"
       nomodule
       defer
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/polyfills-es5.js"
+      src="/BookStore-ClientAngularApp/polyfills-es5.js"
       nomodule
       defer
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/polyfills-es2015.js"
+      src="/BookStore-ClientAngularApp/polyfills-es2015.js"
       type="module"
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/styles-es2015.js"
+      src="/BookStore-ClientAngularApp/styles-es2015.js"
       type="module"
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/styles-es5.js"
+      src="/BookStore-ClientAngularApp/styles-es5.js"
+      nomodule
+      defer
+    ></script>
+    <script src="/BookStore-ClientAngularApp/scripts.js" defer></script>
+    <script
+      src="/BookStore-ClientAngularApp/vendor-es2015.js"
+      type="module"
+    ></script>
+    <script
+      src="/BookStore-ClientAngularApp/vendor-es5.js"
       nomodule
       defer
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/scripts.js"
-      defer
-    ></script>
-    <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/vendor-es2015.js"
+      src="/BookStore-ClientAngularApp/main-es2015.js"
       type="module"
     ></script>
     <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/vendor-es5.js"
-      nomodule
-      defer
-    ></script>
-    <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/main-es2015.js"
-      type="module"
-    ></script>
-    <script
-      src="http://huyletruong.github.io/BookStore-ClientAngularApp/main-es5.js"
+      src="/BookStore-ClientAngularApp/main-es5.js"
       nomodule
       defer
     ></script>
