--- a/index.html
+++ b/index.html
@@ -6,56 +6,27 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script>
+      (function () {
+        var imgArray = Array.from(document.getElementsByTagName("img")).forEach(
+          (e) => {
+            var currentSrc = e.src;
+            e.src = document.URL + "/" + currentSrc;
+          }
+        );
+
+        var imgArray = Array.from(
+          document.getElementsByTagName("script")
+        ).forEach((e) => {
+          var currentSrc = e.src;
+          e.src = document.URL + "/" + currentSrc;
+        });
+      });
+    </script>
   </head>
   <body>
     <div class="container">
       <app-root></app-root>
     </div>
-    <script
-      src="/BookStore-ClientAngularApp/runtime-es2015.js"
-      type="module"
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/untime-es5.js"
-      nomodule
-      defer
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/polyfills-es5.js"
-      nomodule
-      defer
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/polyfills-es2015.js"
-      type="module"
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/styles-es2015.js"
-      type="module"
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/styles-es5.js"
-      nomodule
-      defer
-    ></script>
-    <script src="/BookStore-ClientAngularApp/scripts.js" defer></script>
-    <script
-      src="/BookStore-ClientAngularApp/vendor-es2015.js"
-      type="module"
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/vendor-es5.js"
-      nomodule
-      defer
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/main-es2015.js"
-      type="module"
-    ></script>
-    <script
-      src="/BookStore-ClientAngularApp/main-es5.js"
-      nomodule
-      defer
-    ></script>
-  </body>
+  <script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="scripts.js" defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 </html>
