--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="container">
       <app-root></app-root>
     </div>
-    <script src="runtime-es2015.js" type="module"></script>
-    <script src="runtime-es5.js" nomodule defer></script>
-    <script src="polyfills-es5.js" nomodule defer></script>
-    <script src="polyfills-es2015.js" type="module"></script>
-    <script src="styles-es2015.js" type="module"></script>
-    <script src="styles-es5.js" nomodule defer></script>
-    <script src="scripts.js" defer></script>
-    <script src="vendor-es2015.js" type="module"></script>
-    <script src="vendor-es5.js" nomodule defer></script>
-    <script src="main-es2015.js" type="module"></script>
-    <script src="main-es5.js" nomodule defer></script>
+    <script src="BookStore-ClientAngularApp/runtime-es2015.js" type="module"></script>
+    <script src="BookStore-ClientAngularApp/runtime-es5.js" nomodule defer></script>
+    <script src="BookStore-ClientAngularApp/polyfills-es5.js" nomodule defer></script>
+    <script src="BookStore-ClientAngularApp/polyfills-es2015.js" type="module"></script>
+    <script src="BookStore-ClientAngularApp/styles-es2015.js" type="module"></script>
+    <script src="BookStore-ClientAngularApp/styles-es5.js" nomodule defer></script>
+    <script src="BookStore-ClientAngularApp/scripts.js" defer></script>
+    <script src="BookStore-ClientAngularApp/vendor-es2015.js" type="module"></script>
+    <script src="BookStore-ClientAngularApp/vendor-es5.js" nomodule defer></script>
+    <script src="BookStore-ClientAngularApp/main-es2015.js" type="module"></script>
+    <script src="BookStore-ClientAngularApp/main-es5.js" nomodule defer></script>
   </body>
   <script>
     (function () {
